# DigitalEqualizer

./: .gitignore  CMakeLists.txt  Cyfrowy Equalizer.docx
cmake/: CrossCompile.cmake  FindOpenOCD.cmake  cross_compile.cmake
include/: DigitalEqualizer.hpp
include/audio/: AudioPlayer.hpp  AudioPreprocessor.hpp  Playlist.hpp  PlaylistPlayer.hpp  WavAudioMetadata.hpp  WavAudioReader.hpp
include/audio/filter/: AudioFilter.hpp  DigitalEqualizerFilter.hpp  FFTAudioFilter.hpp
include/controller/: Application.hpp  LedDiodeControl.hpp
include/filesystem/: DirectoryListing.hpp  FileReadStream.hpp
include/math/: fft.hpp
include/service/: NotificationService.cpp  NotificationService.hpp  RequestHandler.cpp  RequestHandler.hpp
include/sys/: Application.hpp  BluetoothCommunicationProvider.hpp  LedDiodeControl.hpp  Task.hpp
lib/: CMakeLists.txt
lib/BSP/: CMakeLists.txt
lib/BSP/src/STM32F4-Discovery/: stm32f4_discovery_audio.c  stm32f4_discovery_audio.h
lib/FatFs/: CMakeLists.txt
lib/FatFs/src/drivers/: fatfs_sd.c  fatfs_sd.h  user_diskio.c  user_diskio.h
lib/FatFs/src/option/: syscall.c
lib/HAL/: CMakeLists.txt
lib/player-protocol/: CMakeLists.txt  test.cpp
lib/player-protocol/include/player_protocol/: MediumChangedMessage.hpp  Message.hpp  MessageSerializer.hpp  MessageType.hpp  MessageVisitor.hpp  PlayRequest.hpp  TimeChangedMessage.hpp  VolumeChanged.hpp
lib/player-protocol/include/player_protocol/changed/: MediumChangedMessage.hpp  TimeChangedMessage.hpp  VolumeChangedMessage.hpp
lib/player-protocol/include/player_protocol/request/: ChangeMediumRequest.hpp  ChangeVolumeRequest.hpp  FastForwardRequest.hpp  PauseRequest.hpp  PlayRequest.hpp  SeekRequest.hpp  StopRequest.hpp
lib/player-protocol/include/player_protocol/response/: ErrorResponse.hpp  OkResponse.hpp  PlaylistResponse.hpp
lib/player-protocol/src/player_protocol/: MediumChangedMessage.cpp  Message.cpp  MessageFactory.cpp  MessageSerializer.cpp  MessageVisitor.cpp  PlayRequest.cpp  TimeChangedMessage.cpp  VolumeChanged.cpp
lib/player-protocol/src/player_protocol/changed/: MediumChangedMessage.cpp  TimeChangedMessage.cpp  VolumeChangedMessage.cpp
lib/player-protocol/src/player_protocol/request/: ChangeMediumRequest.cpp  ChangeVolumeRequest.cpp  FastForwardRequest.cpp  PauseRequest.cpp  PlayRequest.cpp  SeekRequest.cpp  StopRequest.cpp
lib/player-protocol/src/player_protocol/response/: ErrorResponse.cpp  OkResponse.cpp  PlaylistResponse.cpp
lib/startup/: CMakeLists.txt
lib/startup/src/: system_stm32f4xx.c
lib/stm32f4xx/: CMakeLists.txt
lib/stm32f4xx/inc/: stm32f4xx_dfsdm.h
lib/stm32f4xx/inc/cmsis/: core_cm0.h  core_cm0plus.h  core_cm3.h  core_cm4.h  core_cm7.h  core_cmInstr.h  core_cmSimd.h  core_sc000.h  core_sc300.h
lib/stm32f4xx/include/: ffconf.h  stm32f4xx.h  stm32f4xx_hal_conf.h
lib/stm32f4xx/src/: startup_stm32f40_41xxx.s  stm32f4xx_dsi.c  stm32f4xx_qspi.c  stm32f4xx_rcc.c  stm32f4xx_syscfg.c  system_stm32f4xx.c
src/: DigitalEqualizer.cpp  main.cpp
src/audio/: AudioPlayer.cpp  AudioPreprocessor.cpp  Playlist.cpp  PlaylistPlayer.cpp  WavAudioReader.cpp
src/audio/filter/: AudioFilter.cpp  DigitalEqualizerFilter.cpp  FFTAudioFilter.cpp
src/controller/: Application.cpp  LedDiodeControl.cpp
src/filesystem/: DirectoryListing.cpp  FileReadStream.cpp
src/math/: fft.cpp
src/service/: NotificationService.cpp  RequestHandler.cpp
src/sys/: Application.cpp  BluetoothCommunicationProvider.cpp  LedDiodeControl.cpp  Task.cpp  interrupt_forwarders.cpp
